kibana/kibana-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: elastic-stack
    component: kibana
spec:
  type: ClusterIP
  selector:
    app: elastic-stack
    component: kibana
  ports:
  - name: http
    port: 5601
    protocol: TCP
    targetPort: 5601
